[blocks-in-inline] Fix fast/block/inside-inlines/block-width-check.html https://bugs.webkit.org/show_bug.cgi?id=302307

Reviewed by Antti Koivisto.

We need to teach RenderBlockFlow::computeInlinePreferredLogicalWidths to handle
block level boxes within inline content.

Test: fast/inline/blocks-in-inline-layout-with-shrink-to-fit-width.html

* LayoutTests/fast/inline/blocks-in-inline-layout-with-shrink-to-fit-width-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-with-shrink-to-fit-width.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::InlineMinMaxIterator::next):
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):
Block level box behaves like line break + contributes to min/max by its preferred size.

Canonical link: https://commits.webkit.org/302906@main